[metadata]
name = highlander_agent
version = 2015.12.1
summary = Highlander Monitoring Agent Project
description-file =
license = Apache License, Version 2.0
home-page = https://launchpad.net/highlander
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Stratus Highlander Team
author-email = aneesh.puttur@stratus.com

[files]
packages =
    highlander_agent

[entry_points]
console_scripts =
    highlander-agent = highlander_agent.cmd.launch:main




