[metadata]
name = bat_agent
version = 2015.12.1
summary = Bat Monitoring Agent Project
description-file =
license = Apache License, Version 2.0
home-page = https://launchpad.net/bat
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Stephen Huang
author-email = stephen_huang_@hotmail

[files]
packages =
    bat_agent

[entry_points]
console_scripts =
    bat-agent = bat_agent.cmd.launch:main




